<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_view_tasks"
        android:icon="@drawable/icono_personas"
        android:title="@string/gestion_personas"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/pause"
        android:icon="@drawable/ic_checklist"
        android:title="@string/pause"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/logout"
        android:checkable="false"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="withText" />
</menu>