<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/captionCD"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtCaptionCD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ElijaOpcionTxt"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/CD_eliminar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/CD_eliminar"
        app:icon="@drawable/icono_eliminad_cd" />

    <Button
        android:id="@+id/CD_actualizar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/CD_Actualizar"
        app:icon="@drawable/icono_actualizar_cd" />


</androidx.appcompat.widget.LinearLayoutCompat>