<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    >

    <ImageView
        android:id="@+id/detailUserAvatar"
        android:layout_width="102dp"
        android:layout_height="115dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_picture" />

    <TextView
        android:id="@+id/txtDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailUserAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isManagerSWCHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:text="@string/manager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtDisplayName"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplayName" />

    <TextView
        android:id="@+id/isEnabledSWCH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:minHeight="48dp"
        android:text="@string/enabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/isManagerSWCHT"
        app:layout_constraintTop_toTopOf="@+id/isManagerSWCHT" />
</androidx.constraintlayout.widget.ConstraintLayout>