<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.aidealvarado.controldepresenciaAPFM.ui.ClockInFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/avatarView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/avatar_image"
                        app:layout_constraintBottom_toTopOf="@+id/tiempoTrabajadoTXT"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/avatarView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Nombre " />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/dia_laborable"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/avatarView"
                        app:layout_constraintTop_toBottomOf="@+id/textName" />

                    <TextView
                        android:id="@+id/tiempoTrabajadoTXT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/tiempo_trabajado"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="39dp"
                    android:layout_height="39dp"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/weather_icon"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/weatherDescription"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/clockInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/checkin"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_punch_green"
                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

                <ImageButton
                    android:id="@+id/clockOutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/checkout"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_punch_red"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clkRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>